2017-03-24  Antoine Quint  <graouts@webkit.org>

        [Modern Media Controls] Remove placard icon if height is compressed
        https://bugs.webkit.org/show_bug.cgi?id=167935
        <rdar://problem/30397128>

        Reviewed by Dean Jackson.

        We add a new test to check that the various designed constraints to toggle display of a placard's
        icon, title and description are honored. Also, due to the old layout() method now being called
        "commit()", we refactor a relevant test.

        * media/modern-media-controls/layout-node/node-made-dirty-during-commit-expected.txt: Added.
        * media/modern-media-controls/layout-node/node-made-dirty-during-commit.html: Added.
        * media/modern-media-controls/media-controls/media-controls-placard-compressed-metrics-expected.txt: Added.
        * media/modern-media-controls/media-controls/media-controls-placard-compressed-metrics.html: Added.

2017-03-24  Eric Carlson  <eric.carlson@apple.com>

        [MediaStream] "ideal" constraints passed to getUserMedia should affect fitness score
        https://bugs.webkit.org/show_bug.cgi?id=170056

        Reviewed by Youenn Fablet.

        * fast/mediastream/MediaStream-video-element-displays-buffer-expected.txt:
        * fast/mediastream/MediaStream-video-element-displays-buffer.html:
        * fast/mediastream/MediaStreamTrack-getCapabilities-expected.txt:
        * fast/mediastream/apply-constraints-advanced-expected.txt:
        * fast/mediastream/apply-constraints-advanced.html:
        * fast/mediastream/apply-constraints-video-expected.txt:
        * fast/mediastream/apply-constraints-video.html:

2017-03-24  Dean Jackson  <dino@apple.com>

        Serialization of custom props in longhand should be "" not value of shorthand
        https://bugs.webkit.org/show_bug.cgi?id=167699
        <rdar://problem/30324200>

        Reviewed by Sam Weinig.

        * fast/css/variables/rule-property-get-expected.html: