@@ -1,5 +1,12 @@
-CONSOLE MESSAGE: line 25: <link rel=preload> must have a valid `as` value
-This test makes sure that link preload triggers error events for non-existing resources.
+CONSOLE MESSAGE: line 27: <link rel=preload> must have a valid `as` value
+PASS successfullyParsed is true
 
-PASS Makes sure that preloaded resources trigger onerror 
+TEST COMPLETE
+PASS styleFailed is true
+PASS scriptFailed is true
+PASS imageFailed is true
+PASS fontFailed is true
+PASS trackFailed is true
+PASS gibrishFailed is true
+PASS noTypeFailed is true
 
