@@ -55,12 +55,6 @@
             // FIXME: XHR should trigger a single download, but it downloads 2 resources instead.
             verifyDownloadNumber("http://127.0.0.1:8000/resources/dummy.xml", 2);
             // FIXME: We should verify for video and audio as well, but they seem to (flakily?) trigger multiple partial requests.
-            var xhr = new XMLHttpRequest();
-            xhr.open("GET", "../resources/dummy.xml");
-            xhr.send();
-            var xhr2 = new XMLHttpRequest();
-            xhr2.open("GET", "../resources/dummy.xml?badvalue");
-            xhr2.send();
             t.done();
             }), 100);
     }));
