@@ -1,2 +1,0 @@
-CONSOLE MESSAGE: The resource http://127.0.0.1:8000/resources/square100.png?name=value was preloaded using link preload but not used within a few seconds from the window's load event. Please make sure it wasn't preloaded for nothing.
- This test verifies that unused preload resources (and only unused ones) issue a warning.
