@@ -2280,8 +2280,6 @@ void Document::prepareForDestruction()
     }
 #endif
 
-    m_cachedResourceLoader->stopUnusedPreloadsTimer();
-
     detachFromFrame();
 
     m_hasPreparedForDestruction = true;
